docs: Update Discord invite links and add server profile/creator features
- Update Discord invite from NZwzJ9Q to SE6xHmvKrZ across all GitHub templates
- Remove legacy config.template.js and config.template.json files
- Add server_profile schema with banner, tagline, about, social links, and theme customization (Tier 1+)
- Add SEO-friendly slug field to public_data for server pages
- Add creator_status schema with featured creator program, tier system, and badges
- Add bot list integrations:

--- a/Web/views/pages/donate.ejs
+++ b/Web/views/pages/donate.ejs
@@ -239,7 +239,7 @@
 									<span class="icon"><i class="fa fa-github"></i></span>
 									<span>Star on GitHub</span>
 								</a>
-								<a class="button is-info is-outlined" href="https://discord.gg/GSZfe5sBp6" target="_blank">
+								<a class="button is-info is-outlined" href="https://discord.gg/SE6xHmvKrZ" target="_blank">
 									<span class="icon"><i class="fa fa-discord"></i></span>
 									<span>Join Discord</span>
 								</a>
