--- a/Web/views/pages/membership-success.ejs
+++ b/Web/views/pages/membership-success.ejs
@@ -131,7 +131,7 @@
 					<p class="success-note">
 						<span class="icon is-small"><i class="fa fa-envelope"></i></span>
 						A confirmation email has been sent to your email address.<br>
-						Questions? <a href="https://discord.gg/GSZfe5sBp6">Contact support</a>
+						Questions? <a href="https://discord.gg/SE6xHmvKrZ">Contact support</a>
 					</p>
 				</div>
 			</div>
